Second commit of Animal Husbendary Website

--- a/sire-directory.html
+++ b/sire-directory.html
@@ -46,12 +46,12 @@
                     <div class="p-2"> 
                          <a href="#">
                            <i class="fas fa-phone"></i>
-                           <span> +1800-001-658</span>
+                           <span> +1800-001-668</span>
                          </a> 
                       </div>
                   <div class="vr"></div>
                       <div class="p-2">
-                         <a href="mailto:info@peacefulthemes.com">
+                         <a href="#">
                            <i class="fas fa-envelope"></i>
                         <span>info@animalhusbandry.com</span>
                          </a>
