--- a/login.html
+++ b/login.html
@@ -44,14 +44,14 @@
                     <div class="p-2"> 
                          <a href="#">
                            <i class="fas fa-phone"></i>
-                           <span> +1800-001-658</span>
+                           <span> +1800-001-668</span>
                          </a> 
                       </div>
                   <div class="vr"></div>
                       <div class="p-2">
-                         <a href="mailto:info@peacefulthemes.com">
+                         <a href="#">
                            <i class="fas fa-envelope"></i>
-                           <span>info@peacefulthemes.com</span>
+                            <span>info@animalhusbandry.com</span>
                          </a>
                       </div>
                   <div class="vr"></div>
